<resources>
    <string name="app_name">Portifolius</string>
    <string name="popular_movies">Filmes populares</string>
    <string name="my_nanodegree_apps">Meus aplicativos do Nanodegree</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Faça-o maior</string>
    <string name="make_your_app_wtih_material">Faça seu app com Material</string>
    <string name="go_ubiquitious">Seja onipresente</string>
    <string name="capstone">Capstone - Meu proprio app</string>
    <string name="msg_toast_app">Este botão irá executar o app </string>
</resources>
